# spotify-lyrics-translator

./: .gitignore  CHANGELOG.md  SpotifyTranslator.spec  app.py  build_app.py  build_dmg.py  config.json  create_dmg.py  pyproject.toml  readme.md  requirements.txt  run.sh  setup.py  test.py  version.json  version_manager.py
.github/workflows/: build.yml  release.yml
assets/: app_icon.icns
scripts/: build_app.py  build_dmg.py  create_dmg.py  setup.py  version_manager.py
src/: main.py
src/config/: app_config.py
src/core/: auth.py  cache.py
src/gui/: app.py  styles.py
src/gui/components/: dialogs.py  lyrics_view.py  player_info.py
src/gui/utils/: font_manager.py  gui_utils.py
src/utils/: time_utils.py
