[project]
name = "spotify-translator"
version = "1.0.0"
description = "A desktop application that shows real-time translations of Spotify lyrics while you listen to music"
authors = [
    {name = "Mahdi Rashidi", email = "m8rashidi@gmail.com"},
]
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/MRdevX/spotify-translator"
Repository = "https://github.com/MRdevX/spotify-translator.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spotify_translator"] 